...
    <string name="time">Time</string>
    <string name="services">Services</string>
    <string name="movies">Movies</string>
    <string name="device_info">Device Information</string>
    <string name="send_message">Send Message</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="get_content_error">Error getting content!</string>
    <string name="content_error_detail" translatable="false">%1$s\n%2$s</string>
...
    <string name="multiepg_text_size_compact">Compact</string>
    <string name="multiepg_text_size_comfortable">Comfortable</string>
    <string name="ssl_enabled">https</string>
    <string name="ssid">Wifi Name</string>
    <string name="port">Port</string>
    <string name="live">Live</string>
    <string name="port_stream_live">Port (Live)</string>
    <string name="port_stream_file">Port (Movies)</string>
    <string name="settings">Settings</string>
    <string name="host_long">Hostname or IP</string>
    <string name="close">Close</string>
    <string name="minutes_short">min.</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="saving">Saving. Please wait&#8230;</string>
...

    <string name="virtual_remote">Virtual Remote</string>
    <string name="login">Login</string>
    <string name="defaultOnNoWifi">Is default profile on no Wifi</string>
    <string name="login_enabled">Enable Login</string>
    <string name="current_service">Now</string>
    <string name="provider">Provider</string>
...
    <string name="reset_cache_all">All profiles</string>
    <string name="reset_cache_done">Cache reset</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_updated">Updated profile</string>
    <string name="profile_added">Added profile</string>
...
    <string name="tags">Tags</string>
    <string name="screenshot">Screenshot</string>
    <string name="host_empty">The host name cannot be empty!</string>
    <string name="standby">Standby</string>
    <string name="restart_gui">Restart GUI</string>
...
    <string name="in_standby">Device is now in Standby-Mode</string>
    <string name="is_running">Device is now running</string>
    <string name="stream">Stream</string>
    <string name="stream_host_long">Host/IP for streaming (optional)</string>
    <string name="stream_current">Stream current</string>
...
    <string name="show_now_playing_strip_long">Show what\'s currently on the box on TV &amp; Movies</string>
    <string name="simple_remote">Simple remote layout</string>
    <string name="vps_default">VPS default for new timers</string>
    <string name="vps_default_hint">Used when the receiver has the VPS plugin.</string>
    <string name="screenshot_saved">Screenshot saved to \'%s\'</string>
    <string name="imdb">IMDb</string>
...
    <string name="sync_picons">Sync Picons</string>
    <string name="sync_picons_long">Sync Picons into app storage using the currently configured connection profile</string>
    <string name="sync_picons_path">Picons - remote path</string>
    <string name="sync_picons_path_long">Path where the Picons on your dreambox reside</string>
    <string name="connecting">Connecting</string>
...
    <string name="use_name_as_picon_filename_long">Use service name as file name for picons</string>
    <string name="use_name_as_picon_filename">Picons by service name</string>
    <string name="picons_online_use_name">Use service name for online picons</string>
    <string name="picons_online_use_name_summary">Requests online picons by service name instead of the service reference.</string>
    <string name="picons_offline_global_hint">Synced (offline) picons and the sync itself use the global picon settings.</string>
...
    <string name="dump_xml">Dump xml content</string>
    <string name="dump_xml_long">Dump xml content to the app cache</string>
    <string name="enable">Enable</string>
    <string name="epg_sync">Synchronizing EPG</string>

...
    <string name="host_unreach">Could not connect to host</string>
    <string name="next_event">Next Event</string>
    <string name="stream_mode">Stream mode</string>
    <string name="stream_mode_direct">Direct</string>
    <string name="stream_mode_encoder">Dreambox encoder (RTSP)</string>
    <string name="stream_mode_transcoding">Transcoding (HTTP)</string>
    <string name="transcode_port">Transcoding port</string>
    <string name="zap_and_stream">Zap and stream</string>
    <string name="zap_and_stream_summary">Tune the receiver to this service before playback. A single-tuner box can only stream a service on the current transponder, and this also changes the channel on the TV.</string>
    <string name="encoder_path">Stream path</string>
    <string name="audio_bitrate">Audio Bitrate</string>
    <string name="video_bitrate">Video Bitrate</string>
...
    <string name="picon_sync_started">Picon synchronization started. See notifaction area for details.</string>
    <string name="picon_sync_running">There is still another picon synchronization running!</string>
    <string name="streaming">Streaming</string>
    <string name="integrated_video_player">Integrated video player</string>
    <string name="integrated_video_player_long">Use integrated videoplayer when playing streams</string>
...
    <string name="video_enable_gestures_long">Enable gestures for volume and brightness control</string>
    <string name="video_enable_gestures">Enable gestures</string>
    <string name="online_picons">Use "online" picons</string>
    <string name="online_picons_long">Don\'t use synced picons but load them directly via http(s). May cause consinderable traffic!</string>
    <string name="audio_tracks">Audio Tracks</string>
...
    <string name="begin_date">Begin date</string>
    <string name="end_date">End date</string>
    <string name="encoder_user">Encoder user</string>
    <string name="encoder_pass">Encoder password</string>
    <string name="dynamic_theme_colors_long">Use dynamic theme colors\nChanging this will RESTART the app!</string>
    <string name="dynamic_theme_colors">Dynamic theme colors</string>
    <string name="trust_all_certs">All certificates</string>
    <string name="trust_all_certs_confirm_title">Trust all certificates?</string>
    <string name="trust_all_certs_confirm">dreamDroid will not verify this profile\'s HTTPS certificate. Use this only for self-signed certificates on your own receiver. This can be dangerous.</string>
    <string name="setup_welcome">Welcome!</string>
...
    <string-array name="vps_modes">
        <item>No</item>
        <item>Yes (safe mode)</item>
        <item>Yes</item>
    </string-array>
...
